--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                                         <li>Dr. T Sivashankar, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr. Deveraj Verma, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr. Vikram N, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Prof. Vivekananda Mukherjee, Indian Institute of Technology (ISM), Dhanbad</li>
+                                        <li>Prof. Vivekananda Mukherjee, Indian Institute of Technology (ISM), Dhanbad, India</li>
                                         <li>Dr. N V Kousik, Arden University, United Kingdom</li>
                                         <li>Dr. R Kumar, National Institute of Technology, Nagaland, India</li>
                                         <li>Dr. M Vasim Babu, Anna University, MIT Campus, India</li>
@@ -853,7 +853,7 @@
                                         <li>Athanasios V. Vasilakos, University of Agder (UiA), Grimstad, Norway</li>
                                         <li>Dr. G.K.D Prasanna Venkatesan, Chaitanya Bharathi Institute of Technology,
                                             Hyderabad, Telangana</li>
-                                        <li>Dr K N Sivabalan, Sri Krishna College of Engineering and Technology,
+                                        <li>Dr. K N Sivabalan, Sri Krishna College of Engineering and Technology,
                                             Coimbatore</li>
                                         <li>Dr. G.Hariharan. Malla Reddy University, Hyderabad</li>
                                         <li>Dr. M.Thurai Pandian, Vellore institute of technology, Vellore</li>
@@ -879,7 +879,7 @@
                                         <li>Dr. M S Mekala, Robert Gordon University, Scotland</li>
                                         <li>Dr. Sanjeevi Pandiyan, Nantong University, China</li>
                                         <li>Dr. Iacovos Ioannou, University of Cyprus, Cyprus</li>
-                                        <li>Dr Mudassir Khan, King Khalid University, Saudi Arabia</li>
+                                        <li>Dr. Mudassir Khan, King Khalid University, Saudi Arabia</li>
                                         <li>Dr. A. Prakash, Jain (Deemed-to-be University), Bengaluru, India</li>
                                     </ul>
                                 </div>
@@ -897,8 +897,8 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <ul>
-                                        <li>Dr Amritpal Singh, National Institute of Technology, Jalandhar, India</li>
-                                        <li>Dr Kuldeep Kumar, National Institute of Technology, Kurukshetra, India</li>
+                                        <li>Dr. Amritpal Singh, National Institute of Technology, Jalandhar, India</li>
+                                        <li>Dr. Kuldeep Kumar, National Institute of Technology, Kurukshetra, India</li>
                                         <li>Prof. Raju Bhukya, National Institute of Technology, Warangal - 506004,
                                             India</li>
                                         <li>Dr Surendar M, National Institute of Technology, Puducherry, India</li>
@@ -1465,25 +1465,31 @@
                 <div class="col-md-4 mb-4">
                     <div class="p-4 text-center shadow">
                         <h6><b>1. Originality and Plagiarism</b></h6>
-                        <p>All submitted papers must be original, not previously published, and not under consideration
+                        <p style="text-align: justify;">
+                            All submitted papers must be original, not previously published, and not under consideration
                             for publication elsewhere. Submissions found to contain plagiarism or self-plagiarism will
-                            be rejected.</p>
+                            be rejected.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="p-4 text-center shadow">
                         <h6><b>2. Registration and Presentation</b></h6>
-                        <p>Submission of a manuscript implies that at least one of the authors will register for the
+                        <p style="text-align: justify;">
+                            Submission of a manuscript implies that at least one of the authors will register for the
                             conference and present the paper if it is accepted. Papers not presented may be excluded
-                            from the final proceedings.</p>
+                            from the final proceedings.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="p-4 text-center shadow">
                         <h6><b>3. Full-length Papers and IEEE Compliance</b></h6>
-                        <p>Authors are encouraged to submit full-length papers to facilitate thorough peer review and
+                        <p style="text-align: justify;">
+                            Authors are encouraged to submit full-length papers to facilitate thorough peer review and
                             ensure eligibility for publication in IEEE Xplore, subject to meeting IEEE quality and
-                            formatting standards.</p>
+                            formatting standards.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -1926,6 +1932,7 @@
         </center>
 </body>
 </html>
+
 
 
 
