--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                                         <li>Dr. K. Manivel, Karnavati University, Gujarat, India</li>
                                         <li>Dr. S. Jerald Nirmal Kumar, Sharda University, India</li>
                                         <li>Dr. A. Daniel, Amity University, Gwalior</li>
-                                        <li>Dr. P. Saravanan, SRM, University, India</li>
+                                        <li>Dr. P. Saravanan, SRM University, India</li>
                                         <li>Dr. Ramesh C. Poonia, Amity University Rajasthan, Jaipur, India (MGE)</li>
                                         <li>Dr. C. Shoba Bindu, Jawaharlal Nehru Technological University Anantapur,
                                             India</li>
@@ -925,16 +925,16 @@
                                         </li>
                                         <li>Praveen Dominic, Tech Lead - Data Engineer, Tech Mahendra, Toronto, Canada
                                         </li>
-                                        <li>Dr. Surendiran B, National institute of Technology, Puducherry</li>
-                                        <li>Dr. Sivakumar V, Vellor Institute of Technology, Vellore</li>
-                                        <li>Dr. Tamilselvi, SRM University, Chennai</li>
-                                        <li>Dr. Senthilkumar T, Amrita University, Coimbatore</li>
-                                        <li>Dr. Aruna M, SRM University, Chennai</li>
-                                        <li>Dr. Manjunath D R, BMS Institute of Technology, Bengaluru</li>
-                                        <li>Dr. Senthilkumar, Anna university, Trichy</li>
-                                        <li>Dr. Sivakumar T, Puduchery Technical University, Puduchery</li>
-                                        <li>Dr. Niranjana G, SRM University, Chennai</li>
-                                        <li>Dr. Sivakumar B, SRM University, Chennai</li>
+                                        <li>Dr. Surendiran B, National institute of Technology, Puducherry, India</li>
+                                        <li>Dr. Sivakumar V, Vellor Institute of Technology, Vellore, India</li>
+                                        <li>Dr. Tamilselvi, SRM University, Chennai, India</li>
+                                        <li>Dr. Senthilkumar T, Amrita University, Coimbatore, India</li>
+                                        <li>Dr. Aruna M, SRM University, Chennai, India</li>
+                                        <li>Dr. Manjunath D R, BMS Institute of Technology, Bengaluru, India</li>
+                                        <li>Dr. Senthilkumar, Anna university, Trichy, India</li>
+                                        <li>Dr. Sivakumar T, Puducherry Technical University, Puducherry, India</li>
+                                        <li>Dr. Niranjana G, SRM University, Chennai, India</li>
+                                        <li>Dr. Sivakumar B, SRM University, Chennai, India</li>
                                     </ul>
                                 </div>
                             </div>
@@ -963,7 +963,7 @@
                                             <li>Dr. Mohammad S. Obaidat, University of Texas-Permian Basin, USA</li>
                                             <li>Dr. Veni Mathavan, Indian Institute of Science, Bengaluru, India</li>
                                             <li>Dr. R. Samson Ravindran, Executive Director, Mahendra Educational
-                                                Institutions, India.</li>
+                                                Institutions, India</li>
                                             <li>Dr. Abin George, Technical Officer, CSIR - National Aerospace
                                                 Laboratories (NAL), Bengaluru, India</li>
                                             <li>Dr. Suthendran Kannan, Kalasalingam University, India</li>
@@ -991,19 +991,19 @@
                             <tbody>
                                 <tr>
                                     <td>Submission Date</td>
-                                    <td>September 30th 2026</td>
+                                    <td>30th September, 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Acceptance Notification</td>
-                                    <td>November 15th 2026</td>
+                                    <td>15th November, 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Deadline for Final Papers & Registration</td>
-                                    <td>December 15th 2026</td>
+                                    <td>15th December, 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Conference Date</td>
-                                    <td>January 21st - 23rd 2027</td>
+                                    <td>21st - 23rd January, 2027</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -1628,28 +1628,35 @@
     <div class="col-md-10">
       <div class="p-4 shadow">
         <h6><b>Paper Submission:</b></h6>
-        <p>Authors must adhere to all formatting requirements and submission dates when submitting their research papers to the conference.</p>
+        <p style="text-align: justify;">
+            Authors must adhere to all formatting requirements and submission dates when submitting their research papers to the conference.
+        </p>
 
         <h6><b>Initial Screening:</b></h6>
         <p>The conference organisers will verify the initial screening process to ensure that the submitted papers meet the fundamental requirements of the conference, such as relevance to the conference theme and adherence to the formatting guidelines.</p>
 
         <h6><b>Double-Blind Peer Review:</b></h6>
-        <p>Each submitted paper is assigned to an expert double-blind reviewer in the subject by the programme chairs or conference organisers. Reviewers are chosen based on their experience and skill in the subject areas addressed by the conference.</p>
+        <p style="text-align: justify;">
+            Each submitted paper is assigned to an expert double-blind reviewer in the subject by the programme chairs or conference organisers. Reviewers are chosen based on their experience and skill in the subject areas addressed by the conference.</p>
 
         <h6><b>Decision Making with Peer Review Process:</b></h6>
-        <p>Reviewers carefully assess the papers based on factors such as experimental design, clarity of presentation, importance of the research, and technical soundness. They provide feedback and comments to authors to improve their contributions. Based on the feedback, the program chairs make a final decision, which may include acceptance, minor correction with acceptance, or rejection.</p>
+        <p style="text-align: justify;">
+            Reviewers carefully assess the papers based on factors such as experimental design, clarity of presentation, importance of the research, and technical soundness. They provide feedback and comments to authors to improve their contributions. Based on the feedback, the program chairs make a final decision, which may include acceptance, minor correction with acceptance, or rejection.</p>
 
         <h6><b>Standards:</b></h6>
-        <p>Papers accepted to the conference will be involved in the proceedings and published with a collaborative publisher. Although publishable criteria may have slight differences among publishers, widely-accepted sets of criteria have been enforced in ICADIE 2024 for paper selection and publication to ensure high technical quality and ethical standards.</p>
+        <p style="text-align: justify;">
+            Papers accepted to the conference will be involved in the proceedings and published with a collaborative publisher. Although publishable criteria may have slight differences among publishers, widely-accepted sets of criteria have been enforced in ICADIE 2024 for paper selection and publication to ensure high technical quality and ethical standards.</p>
 
         <h6><b>Language:</b></h6>
         <p>The manuscripts submitted to the conference should be written in English, which is required to be inclusive, appropriate, and understandable for editors, reviewers, and future readers. Please use proper grammar and fluent sentences, choose good words, and avoid syntax errors in your paper. Authors should be aware that comprehension difficulties may lead to the rejection of the paper.</p>
 
         <h6><b>Notification to Authors for Revision or Resubmission:</b></h6>
-        <p>The results of the review process, including the acceptance or rejection decision and any required revisions, are sent to the authors within a specific timeframe. Authors are given the opportunity to make the necessary changes and submit their revised work to the conference.</p>
+        <p style="text-align: justify;">
+            The results of the review process, including the acceptance or rejection decision and any required revisions, are sent to the authors within a specific timeframe. Authors are given the opportunity to make the necessary changes and submit their revised work to the conference.</p>
 
         <h6><b>Final Decision:</b></h6>
-        <p>After authors submit their revised papers, the conference organisers evaluate them to ensure that the revisions adequately address the reviewers' suggestions. Authors are informed of the final acceptance decision, and approved papers are published either in the CCIS series or conference proceedings.</p>
+        <p style="text-align: justify;">
+            After authors submit their revised papers, the conference organisers evaluate them to ensure that the revisions adequately address the reviewers' suggestions. Authors are informed of the final acceptance decision, and approved papers are published either in the CCIS series or conference proceedings.</p>
       </div>
     </div>
   </div>
@@ -1932,6 +1939,7 @@
         </center>
 </body>
 </html>
+
 
 
 
