--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@
                         <address>
                             <h5>JAIN Global Campus</h5>
                             Jakkasandra Post, Kanakapura Taluk<br>
-                            Ramanagara District Bangalore<br>
+                            Ramanagara District, Bangalore<br>
                             Karnataka, India - 562112
                         </address>
                     </div>
@@ -1715,8 +1715,8 @@
             </div>
             <div class="row pb-5">
                 <div class="col-md-12 text-md-center">
-                    <p style="font-size:12px;"><span>Site Designed and Maintained By: </span>
-                        <span class="d-block d-md-inline-block">Office of Communications, <a
+                    <p style="font-size:12px;"><span>Site Designed and Maintained by the</span>
+                        <span class="d-block d-md-inline-block">Office of Communications,<a
                                 href="https://www.jainuniversity.ac.in/" class="text-white text-decoration-none"
                                 target="_blank">JAIN (Deemed-to-be University)</a></span>
                     </p>
@@ -1939,6 +1939,7 @@
         </center>
 </body>
 </html>
+
 
 
 
