--- a/index.html
+++ b/index.html
@@ -971,6 +971,41 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Start NSK -->
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFour1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseFour1" aria-expanded="false"
+                                        aria-controls="collapseFour1">
+                                        Advisory Committee
+                                    </button>
+                                </h2>
+                                <div id="collapseFour1" class="accordion-collapse collapse"
+                                    aria-labelledby="headingFour1" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <ul>
+                                            <li>Dr. Rajkumar Buyya, The University of Melbourne, Australia</li>
+                                            <li>Dr. Srinivas Pyda, Server Performance Server Technologies Oracle
+                                                Corporation, USA</li>
+                                            <li>Dr. Kouichi Sakurai, Kyushu University, Japan</li>
+                                            <li>Dr. Salil Kanhere, University of New South Wales, Australia</li>
+                                            <li>Dr. Paris Avgeriou, University of Groningen, Netherlands</li>
+                                            <li>Dr. Witold Pedrycz, University of Alberta, Canada</li>
+                                            <li>Dr. Kwangjo Kim, Korea Advanced Institute of Science and Technology
+                                                (KAIST), South Korea</li>
+                                            <li>Dr. Yingjiu (Joe) Li, University of Oregon, USA</li>
+                                            <li>Dr. Mohammad S. Obaidat, University of Texas-Permian Basin, USA</li>
+                                            <li>Dr. Veni Mathavan, Indian Institute of Science, Bengaluru, India</li>
+                                            <li>Dr. R. Samson Ravindran, Executive Director, Mahendra Educational
+                                                Institutions, India</li>
+                                            <li>Dr. Abin George, Technical Officer, CSIR - National Aerospace
+                                                Laboratories (NAL), Bengaluru, India</li>
+                                            <li>Dr. Suthendran Kannan, Kalasalingam University, India</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End NSK-->
                         </div>
                     </div>
                 </div>
@@ -1939,6 +1974,7 @@
         </center>
 </body>
 </html>
+
 
 
 
