--- a/index.html
+++ b/index.html
@@ -973,34 +973,48 @@
                             </div>
                             <!-- Start NSK -->
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingFour1">
+                                <h2 class="accordion-header" id="headingFive">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseFour1" aria-expanded="false"
+                                        data-bs-target="#headingFive" aria-expanded="false"
                                         aria-controls="collapseFour1">
-                                        Advisory Committee
+                                        List of Reviewers
                                     </button>
                                 </h2>
-                                <div id="collapseFour1" class="accordion-collapse collapse"
+                                <div id="headingFive" class="accordion-collapse collapse"
                                     aria-labelledby="headingFour1" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <ul>
-                                            <li>Dr. Rajkumar Buyya, The University of Melbourne, Australia</li>
-                                            <li>Dr. Srinivas Pyda, Server Performance Server Technologies Oracle
-                                                Corporation, USA</li>
-                                            <li>Dr. Kouichi Sakurai, Kyushu University, Japan</li>
-                                            <li>Dr. Salil Kanhere, University of New South Wales, Australia</li>
-                                            <li>Dr. Paris Avgeriou, University of Groningen, Netherlands</li>
-                                            <li>Dr. Witold Pedrycz, University of Alberta, Canada</li>
-                                            <li>Dr. Kwangjo Kim, Korea Advanced Institute of Science and Technology
-                                                (KAIST), South Korea</li>
-                                            <li>Dr. Yingjiu (Joe) Li, University of Oregon, USA</li>
-                                            <li>Dr. Mohammad S. Obaidat, University of Texas-Permian Basin, USA</li>
-                                            <li>Dr. Veni Mathavan, Indian Institute of Science, Bengaluru, India</li>
-                                            <li>Dr. R. Samson Ravindran, Executive Director, Mahendra Educational
-                                                Institutions, India</li>
-                                            <li>Dr. Abin George, Technical Officer, CSIR - National Aerospace
-                                                Laboratories (NAL), Bengaluru, India</li>
-                                            <li>Dr. Suthendran Kannan, Kalasalingam University, India</li>
+                                            <li>Thomas Butler, Senior Lecturer (Computing), University of Northampton, United Kingdom</li>
+                                            <li>Abolfazl Mehbodniya, College of Science and Technology (KCST), Kuwait</li>
+                                            <li>Dr. Deepak Waikar, Managing Partner, Edu Energy Consultants LLP, Singapore</li>
+                                            <li>Dr. HMM Naleer, Senior Lecturer in Computer Science, South Eastern University of Sri Lanka, Sri Lanka</li>
+                                            <li>Dr. Korhan Cengiz, Department of Electrical and Electronics Engineering, Trakya University, Turkey</li>
+                                            <li>Paul Underhill, Lecturer, Department of Computer Science, University of Chester, United Kingdom</li>
+                                            <li>Dr. Suresh Gnanadhas, Professor, Department of Computer Science and Information Technology, Ambo University, Ethiopia</li>
+                                            <li>Dr. Rizwan Patan, Postdoctoral Researcher, Kennesaw State University, USA</li>
+                                            <li>Dr. Sujatha Krishnamoorthy, Assistant Professor, Wenzhou-Kean University, China</li>
+                                            <li>Fida Hussain, Lecturer, Department of Computing, Canterbury College (EKC Group), United Kingdom</li>
+                                            <li>FHA. Shibly, Senior Lecturer in Information Technology, South Eastern University of Sri Lanka, Sri Lanka</li>
+                                            <li>Prof. Ramesh Chandra Panda, Dean (R&D), Synergy Institute of Engineering and Technology, India</li>
+                                            <li>Dr. S. Nickolas, Professor, Department of Computer Applications, National Institute of Technology, Tiruchirappalli, India</li>
+                                            <li>Dr. Dinesh Mavaluru, Educator, Department of Information Technology, Saudi Electronic University, Saudi Arabia</li>
+                                            <li>Dr. M. Lavanya, Assistant Professor, Computer Science and Engineering, American International University, Kuwait</li>
+                                            <li>Dr. Sherimon P. C., Faculty, Computer Studies, Arab Open University, Oman</li>
+                                            <li>Dr. K. Manivel, Professor and Head, Department of Robotics and Automation, Karnavati University, India</li>
+                                            <li>Naveen Chilamkurti, La Trobe University, Melbourne, Australia</li>
+                                            <li>Karthik Dakshinamurthi, IT Coordinator, Ministry of Higher Education Research and Innovation (MOHERI), Oman</li>
+                                            <li>Oluwaseun Lottu, Curriculum Manager, Stanmore College, London, United Kingdom</li>
+                                            <li>Dr. B. Bazeer Ahamed, Department of IT, University of Technology and Applied Sciences, Al Musanna, Oman</li>
+                                            <li>G. N. Balaji, Associate Professor, School of Computer Science and Engineering, Vellore Institute of Technology, India</li>
+                                            <li>Dr. T. Judgi, Associate Professor, Department of CSE, Sathyabama Institute of Science and Technology, Chennai, India</li>
+                                            <li>Dr. S. Jaya Nirmala, Department of CSE, National Institute of Technology, Tiruchirappalli, India</li>
+                                            <li>Dr. M. S. Guru Prasad, Department of CSE, Graphic Era Deemed-to-be University, Dehradun, India</li>
+                                            <li>Dr. S. Jerald Nirmal Kumar, Department of CSE, Sharda University, Delhi NCR, India</li>
+                                            <li>Dr. M. Arvindhan, Assistant Professor, School of Computing Science and Engineering, Galgotias University, India</li>
+                                            <li>Dr. Ashok Kumar Munnangi, Assistant Professor, Department of Computer Science and Engineering, K L Deemed-to-be University, India</li>
+                                            <li>Dr. Sivaram Rajeyyagari, Department of Computer Science, Shaqra University, Saudi Arabia</li>
+                                            <li>Dr. R. Arun Prasath, Associate Professor, Department of Electronics and Communication Engineering, Siddhartha Institute of Technology and Sciences, Hyderabad, India</li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -1974,6 +1988,7 @@
         </center>
 </body>
 </html>
+
 
 
 
