--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       </div> -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 lazyload" data-src="https://iili.io/fA59sDv.jpg" alt="Banner">
+                <img class="d-block w-100 lazyload" data-src="https://i.postimg.cc/j5CvFTQw/Banner-2.png" alt="Banner">
                 <!-- <img class="d-block w-100 lazyload" data-src="https://i.postimg.cc/3wqqBpMt/Banner.png" alt="Banner"> -->
             </div>
         </div>
@@ -1988,6 +1988,7 @@
         </center>
 </body>
 </html>
+
 
 
 
