--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3 class="ff-merienda-one indigo-dye">About Jain University<span class="hdng-stl">&nbsp;</span></h3>
+                    <h3 class="ff-merienda-one indigo-dye">About Jain University1<span class="hdng-stl">&nbsp;</span></h3>
                
                 </div>
             </div>
@@ -1988,6 +1988,7 @@
         </center>
 </body>
 </html>
+
 
 
 
