--- a/index.html
+++ b/index.html
@@ -1548,12 +1548,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center mb-4">
+                    <h3 class="ff-merienda-one indigo-dye">Paper Submission & Review<span class="hdng-stl">&nbsp;</span></h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <p>All paper submissions and the peer-review process for ICICF 2027 (International Conference on Intelligent Computing Frontiers) are managed using Microsoft CMT.</p> 
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center mb-4">
                     <h3 class="ff-merienda-one indigo-dye"> Publication<span class="hdng-stl">&nbsp;</span></h3>
                 </div>
             </div>
             <div class="row text-center">
-                <p>All accepted and presented papers will be submitted to IEEE Xplore. </p>
-                
+                <p>All accepted and presented papers will be submitted to IEEE Xplore. </p> 
             </div>
         </div>
     </section>
@@ -1807,7 +1814,7 @@
                             href="https://tempwebtest.github.io/assets-folder/paper-submission-template.pdf"
                             target="_blank" rel="nofollow" role="button">
                             <i class="fas fa-download me-1"></i> Paper Submission Template</a>
-                        <a class="btn btn-primary28a me-3" href="https://cmt3.research.microsoft.com/CSET2023"
+                        <a class="btn btn-primary28a me-3" href="#"
                             target="_blank" rel="nofollow" role="button">
                             <i class="far fa-hand-point-up me-1"></i> Submit Paper</a>
                     </div>
@@ -1988,6 +1995,7 @@
         </center>
 </body>
 </html>
+
 
 
 
